@@ -878,7 +878,8 @@ INCLUDE_FILE_PATTERNS  =
 # omitted =1 is assumed.
 
 PREDEFINED             = WZD_MULTITHREAD \
-                         HAVE_OPENSSL
+                         HAVE_OPENSSL \
+                         HAVE_UTF8
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then 
 # this tag can be used to specify a list of macro names that should be expanded. 
