@@ -46,6 +46,7 @@ int do_site_perm(wzd_string_t *ignored, wzd_string_t *command_line, wzd_context_
 int do_site_reload(wzd_string_t * ignored, wzd_string_t *param, wzd_context_t * context);
 int do_site_rusage(wzd_string_t * ignored, wzd_string_t *param, wzd_context_t * context);
 int do_site_savecfg(wzd_string_t *ignored, wzd_string_t *command_line, wzd_context_t * context);
+int do_site_sections(wzd_string_t *ignored, wzd_string_t *command_line, wzd_context_t * context);
 int do_site_test(wzd_string_t *command, wzd_string_t *param, wzd_context_t * context);
 int do_site_unlock(wzd_string_t *ignored, wzd_string_t *command_line, wzd_context_t * context);
 int do_site_utime(wzd_string_t *ignored, wzd_string_t *command_line, wzd_context_t * context);
